// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sanitize applies custom sanitize schema 1`] = `
<div>
  <div>
    <div
      style={
        Object {
          "background": "red",
        }
      }
    >
      text
    </div>
  </div>
</div>
`;

exports[`sanitize sanitizes html by default 1`] = `
<div>
  <div>
    <div>
      text
    </div>
  </div>
</div>
`;
